--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "react-homework-template",
+  "name": "tasks-react-redux",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https://Voronyuk05.github.io/tasks-react-redux/",
   "dependencies": {
     "@redux-devtools/extension": "3.2.3",
-    "clsx": "1.2.1",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "clsx": "^1.2.1",
     "nanoid": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
-    "react-redux": "8.0.2",
+    "react-redux": "^8.0.2",
     "react-scripts": "latest",
-    "redux": "4.2.0"
+    "redux": "4.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
